@@ -3,7 +3,8 @@ v0.1.2
 modules load
 - The Chrome and Opera extensions are now localised
 - Add the hability to show the spoilers without mouse hover
-- Add the possibility to replace forum image links by the concerned image
+- Add the possibility to replace forum media links by the concerned media
+(images, YouTube videos)
 - The construction_max_ap module will not suggest more ap than the remaining for
 each construction
 - Fix the configuration panel help tooltip under Safari
